# tater-tot

./: .gitignore  CMakeLists.txt  README.md  sample.c  tater_sample_c  tater_tests_c  tater_train_c  test_c.c  train.c
benchmarks/: README.md  run_cpp_vs_python.py
c/: Makefile  sample.c  tater_tot.c  tater_tot.h  train.c
cpp/examples/: generate.cpp  train.cpp
cpp/include/tater/: data.hpp  tensor.hpp
cpp/src/: model.cpp  tensor.cpp
data/: README.md  pg1153.txt  pg149.txt  pg1497.txt  pg1572.txt  pg164.txt  pg1656.txt  pg1658.txt  pg18857.txt  pg19322.txt  pg1974.txt  pg1998.txt  pg21092.txt  pg2591.txt  pg2701.txt  pg33644.txt  pg38145.txt  pg4300.txt  pg4363.txt  pg500.txt  pg52124.txt  pg52190.txt  pg52319.txt  pg52881.txt  pg551.txt  pg57493.txt  pg59131.txt  pg60230.txt  pg60688.txt  pg61113.txt  pg62.txt  pg62704.txt  pg64.txt  pg6762.txt  pg6763.txt  pg68.txt  pg72.txt  pg74.txt  pg75201.txt  pg76.txt  (+2 more)
examples/: generate.cpp  train.cpp
include/tater/: checkpoint.hpp  model.hpp  optimizer.hpp  tensor.hpp
python/: tater_generate.py  tater_train.py
python/tater/: __init__.py  checkpoint.py  data.py  model.py  optimizer.py  tensor.py
python/tests/: test_python.py
src/: checkpoint.cpp  data.cpp  model.cpp  optimizer.cpp  tensor.cpp
tests/: test_main.cpp  test_python.py
